# arxiv-rag

./: .gitignore  README.md  pyproject.toml
src/arxiv_rag/: ingest.py  main.py
